added user by email
