# public/swagger.json
@@ -101,6 +101,17 @@
 			},
 			"GetResponse": {
 				"$ref": "#/components/schemas/BaseResponse_User_"
+			},
+			"SearchRequest": {
+				"properties": {
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email"
+				],
+				"type": "object"
 			}
 		},
 		"securitySchemes": {}
@@ -162,8 +173,8 @@
 				]
 			}
 		},
-		"/users/users/by/email/{email}": {
-			"get": {
+		"/users/search": {
+			"post": {
 				"operationId": "GetByEmail",
 				"responses": {
 					"200": {
@@ -178,16 +189,17 @@
 					}
 				},
 				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "email",
-						"required": true,
-						"schema": {
-							"type": "string"
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/SearchRequest"
+							}
 						}
 					}
-				]
+				}
 			}
 		}
 	},
